# happstack-temporary

./: AuthURL.hs  Profile.hs  ProfileURL.hs  README  SiteURL.hs  Types.hs  demo.hs  happstack-authenticate.cabal
Happstack/: Auth.hs
Happstack/Auth/Blaze/: AuthProfile.hs  Login.hs  Templates.hs
Happstack/Auth/Core/: Auth.hs  AuthParts.hs  AuthProfileURL.hs  AuthURL.hs  Profile.hs  ProfileParts.hs  ProfileURL.hs
Happstack/Auth/HSP/: AuthProfile.hs  FormPart.hs  Login.hs
Pages/: AppTemplate.hs  Auth.hs  FormPart.hs  Home.hs  Login.hs  Logout.hs  Profile.hs
State/: Auth.hs
debian/: changelog  control  rules
demo/: Main.hs  ProfileData.hs  SiteURL.hs  authProfile.hs  demo.cabal
demo-blaze/: Acid.hs  Facebook.hs  Main.hs  ProfileData.hs  SiteURL.hs  demo.cabal
demo-blaze-web-routes/: Acid.hs  Main.hs  ProfileData.hs  demo.cabal
demo-blaze-web-routes/Pages/: Home.hs
demo-blaze/Pages/: AppTemplate.hs  Home.hs
demo-hsp/: Main.hs  demo.cabal
demo-hsp/Pages/: Home.hs  Logout.hs
demo/Pages/: AppTemplate.hs  Home.hs  Logout.hs
happstack/: happstack.cabal
happstack-authenticate/: happstack-authenticate.cabal
happstack-authenticate-2/: README.md  happstack-authenticate.cabal
happstack-authenticate-2/Happstack/Authenticate/: API.hs  Core.hs  Password.hs  URL.hs
happstack-authenticate-2/Happstack/Authenticate/Password/: Core.hs
happstack-authenticate-2/demo/: Main.hs
happstack-authenticate/Happstack/: Auth.hs
happstack-authenticate/Happstack/Auth/Blaze/: Templates.hs
happstack-authenticate/Happstack/Auth/Core/: Auth.hs  AuthParts.hs  AuthURL.hs  ProfileParts.hs
happstack-authenticate/debian/: changelog
happstack-authenticate/demo-blaze/: Main.hs  ProfileData.hs
happstack-authenticate/demo-blaze-web-routes/: Acid.hs  Main.hs  SiteURL.hs
happstack-authenticate/demo-blaze-web-routes/Pages/: AppTemplate.hs
happstack-authenticate/demo-hsp/: Acid.hs  ProfileData.hs  demo.cabal
happstack-authenticate/demo-hsp/Pages/: AppTemplate.hs
happstack-fay/: happstack-fay.cabal
happstack-fay/Happstack/: Fay.hs
happstack-fay/Language/Fay/: AJAX.hs  HTML.hs
happstack-fay/fay-hsx/: LICENSE
happstack-fay/fay-hsx/example/: README  hsx-client.hs  hsx-server.hs
happstack-fay/fay-hsx/src/: HTML.hs
happstack-fay/happstack-fay-ajax/src/: AJAX.hs  ResponseType.hs
happstack-fay/happstack-fay/Happstack/: Fay.hs
happstack-hamlet/: happstack-hamlet.cabal
happstack-heist/: happstack-heist.cabal
happstack-heist/Happstack/Server/: Heist.hs
happstack-hstringtemplate/: happstack-hstringtemplate.cabal
happstack-init/: happstack-init.cabal
happstack-init/commands/: happstack.hs
happstack-ixset/: happstack-ixset.cabal
happstack-longpoll/: LongPoll.hs  Test.hs
happstack-plugins/: happstack-plugins.cabal
happstack-state/: happstack-state.cabal
happstack-wai/: happstack-wai.cabal
hsx-jmacro/: example.hs  example2.hs  hsx-jmacro.cabal
hsx-jmacro/HSP/: JMacro.hs  JMacroT.hs
hsx-jmacro/HSX/: JMacro.hs  JMacroT.hs
retired/happstack-data/: happstack-data.cabal
retired/happstack-data/src/Happstack/Data/: Serialize.hs
retired/happstack-data/src/Happstack/Data/Xml/: HaXml.hs  PrintParse.hs
retired/happstack-init/: happstack-init.cabal
retired/happstack-state/src/Happstack/State/: ComponentSystem.hs  Transaction.hs
retired/happstack-util/: happstack-util.cabal
