Name:                happstack-authenticate
Version:             0.3.0
Synopsis:            Happstack Authentication Library
Description:         A themeable authentication library with support for username+password and OpenId.
Homepage:            http://src.seereason.com/happstack-authenticate
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          jeremy@seereason.com
Copyright:           2011 SeeReason Partners, LLC
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2


Library

  Exposed-modules:     Happstack.Auth.HSP.FormPart, 
                       Happstack.Auth.HSP.Login, 
                       Happstack.Auth.Core.Profile, 
                       Happstack.Auth.Core.Auth, 
                       Happstack.Auth.Core.ProfileURL, 
                       Happstack.Auth.Core.AuthParts, 
                       Happstack.Auth.Core.ProfileParts, 
                       Happstack.Auth.Core.AuthURL

  Build-depends:       base > 4 && < 5,
                       acid-state,
                       authenticate (>= 0.9),
                       bytestring,
                       containers,
                       digestive-functors,
                       digestive-functors-happstack >= 0.1,
                       digestive-functors-hsp >= 0.3.1,
                       happstack-hsp,
                       happstack-ixset  >= 6.0 && < 6.1,
                       happstack-server >= 6.0 && < 6.1,
                       safecopy,
                       hsp,
                       hsx,
                       mtl,
                       pwstore-purehaskell,
                       QuickCheck >= 2,
                       safecopy,
                       text,
                       time,
                       web-routes,
                       web-routes-happstack,
                       web-routes-hsp
