Name:                happstack-authenticate
Version:             0.7.5
Synopsis:            Happstack Authentication Library
Description:         A themeable authentication library with support for username+password and OpenId.
Homepage:            http://src.seereason.com/happstack-authenticate
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          jeremy@seereason.com
Copyright:           2011 SeeReason Partners, LLC
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Library

  Exposed-modules:     Happstack.Auth
                       Happstack.Auth.Blaze.Templates
                       Happstack.Auth.Core.Profile,
                       Happstack.Auth.Core.Auth,
                       Happstack.Auth.Core.ProfileURL,
                       Happstack.Auth.Core.AuthParts,
                       Happstack.Auth.Core.ProfileParts,
                       Happstack.Auth.Core.AuthURL,
                       Happstack.Auth.Core.AuthProfileURL

  Build-depends:       base                         > 4 && < 5,
                       acid-state                   == 0.6.*,
                       aeson                        >= 0.4 && < 0.7,
                       authenticate                 == 1.2.*,
                       blaze-html                   == 0.4.*,
                       bytestring                   == 0.9.*,
                       containers                   == 0.4.*,
                       digestive-functors           == 0.2.*,
                       digestive-functors-happstack >= 0.1,
                       digestive-functors-blaze     == 0.2.*,
                       ixset                        >= 1.0 && < 1.1,
                       happstack-server             >= 6.0 && < 7.1,
                       http-conduit                 == 1.4.*,
                       http-types                   == 0.6.*,
                       fb                           == 0.8.*,
                       safecopy                     == 0.6.*,
                       mtl                          == 2.0.*,
                       pwstore-purehaskell          == 2.1.*,
                       QuickCheck                   >= 2,
                       text                         == 0.11.*,
                       time                         >= 1.2 && < 1.5,
                       unordered-containers         == 0.2.*,
                       web-routes                   >= 0.26 && < 0.28,
                       web-routes-happstack         == 0.23.*