name:                happstack-fay
version:             0.1.0.0
synopsis:            Support for using Fay with Happstack
homepage:            http://www.happstack.com/
license:             BSD3
license-file:        LICENSE
author:              Jeremy Shaw
maintainer:          jeremy@n-heptane.com
category:            Happstack
build-type:          Simple
cabal-version:       >=1.8

data-files:
  Language/Fay/AJAX.hs

library
  exposed-modules:     Language.Fay.AJAX,
                       Happstack.Fay,
                       Paths_happstack_fay
  build-depends:       base             > 4 && <5,
                       fay              == 0.9.*,
                       aeson            == 0.6.*,
                       happstack-server >= 7.0 && <7.2
