Name: demo
Version: 1.0.0
License: BSD3
Copyright: (c) 2011 SeeReason Partners LLC
Author: Jeremy Shaw <jeremy@seereason.com>
Stability: Experimental
Category: Web
Synopsis: A demo of the happstack-authenticate library
Description:
 happstack-authenticate supports user account authentication using OpenId or plain old username + password.
Cabal-version: >= 1.8
Build-type: Simple

Flag base4
    Description: Choose the even newer, even smaller, split-up base package.

Executable demo-server
 Main-Is: Main.hs

 GHC-Options: -threaded -Wwarn -O2 -rtsopts -fno-warn-name-shadowing -fno-warn-missing-signatures -fwarn-tabs -fno-warn-unused-binds -fno-warn-orphans -fwarn-unused-imports -fno-spec-constr
 Build-depends: acid-state,
                filepath,
                happstack-authenticate,
                happstack-hsp,
                ixset,
                happstack-server,
                hsx,
                hsp,
                mtl,
                safecopy,
                text >= 0.11,
                blaze-markup,
                blaze-html,
                web-routes,
                web-routes-happstack,
                web-routes-hsp,
                web-routes-th

 if flag(base4)
    Build-Depends: base >= 4 && < 5, syb

